package Logic;

import Data.Product;
import Logic.Interface.FindProduct;

public class FindProductName implements FindProduct {
    @Override
    public FindProduct Find(Product product) {
        return null;
    }
}
