package Logic.Interface;

import Data.Product;

public interface FindProduct {
   FindProduct Find(Product product);
}
