package Logic.Interface;

import Data.Product;
import Logic.Order;

public interface PaymentCash {
    PaymentCash payCash(Order order);

}
