package Performance;

import Data.Product;
import Logic.Delivery;
import Logic.Order;

public class Button implements IButton{
    @Override
    public IButton find() {
        return null;
    }

    @Override
    public IButton addProduct() {
        return null;
    }

    @Override
    public IButton setDelivery() {
        return null;
    }

    @Override
    public IButton payOrder() {
        return null;
    }
}
