package Performance;

import Data.Product;

public interface IButton {
    IButton find();
    IButton addProduct();
    IButton setDelivery();
    IButton payOrder();

}
