package Performance;

import java.util.List;

public class Menu {
    Button buttonAdd;
    Button buttonDelivery;
    Button buttonSetOrder;
    Button buttonPayOrder;

    private void buttonPush(Button button){}
}
